[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
rand = "0.10.0"
tiny-keccak = { version = "2", features = ["keccak"] }
futures = "0.3"
alloy = { version = "1", features = ["provider-http", "contract", "signer-local", "json", "network"] }
